[Issue #6] Publish website to GitHub pages (#13)
Sets up CD pipeline to publish website to GitHub pages when 
changes to website are merged into main, and fixes #6 
* refactor: Updates Astro configs for GitHub pages
  - Sets the site and base parameters to match the GitHub pages URL
  - Changes CTA link to a relative path
* ci: Adds GitHub action to deploy website

--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -6,7 +6,7 @@ hero:
   tagline: Integrating data across the grants ecosystem.
   actions:
     - text: Example Guide
-      link: /guides/example/
+      link: guides/example/
       icon: right-arrow
     - text: Visit our GitHub repo
       link: https://github.com/HHS/simpler-grants-protocol
