[Issue #26] Update website content (#45)
* refactor: Removes old Starlight content
* feat: Adds new placeholder content and an about page
* feat: Adds support for "Edit page" link to each page
* docs: Updates README with protocol working title
* ci: Adds starlight-link-validator and fixes broken links

--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -1,34 +1,38 @@
 ---
-title: Simpler Grant Protocol
-description: Learn more about the simpler grant protocol.
+title: CommonGrants protocol
+description: Documentation for the CommonGrants protocol
 template: splash
 hero:
-  tagline: Integrating data across the grants ecosystem.
+  tagline: An open standard for sharing data about funding opportunities, applications, and awards across the grant ecosystem
   actions:
-    - text: Example Guide
-      link: guides/example/
+    - text: Get started
+      link: /simpler-grants-protocol/getting-started/
       icon: right-arrow
-    - text: Visit our GitHub repo
-      link: https://github.com/HHS/simpler-grants-protocol
-      icon: external
+    - text: Learn more
+      link: /simpler-grants-protocol/about/
+      icon: open-book
       variant: minimal
 ---
 
 import { Card, CardGrid } from "@astrojs/starlight/components";
 
-## Next steps
+## Quick links
 
 <CardGrid stagger>
-  <Card title="Update content" icon="pencil">
-    Edit `src/content/docs/index.mdx` to see this page change.
+  <Card title="Get started" icon="rocket">
+    [Get started](/simpler-grants-protocol/getting-started/) with the
+    CommonGrants protocol.
   </Card>
-  <Card title="Add new content" icon="add-document">
-    Add Markdown or MDX files to `src/content/docs` to create new pages.
+  <Card title="Read the guides" icon="open-book">
+    Learn how to [use and
+    implement](/simpler-grants-protocol/guides/build-an-api/) the protocol.
   </Card>
-  <Card title="Configure your site" icon="setting">
-    Edit your `sidebar` and other config in `astro.config.mjs`.
+  <Card title="Explore the spec" icon="document">
+    Review the [technical
+    specification](/simpler-grants-protocol/reference/specification/).
   </Card>
-  <Card title="Read the docs" icon="open-book">
-    Learn more in [the Starlight Docs](https://starlight.astro.build/).
+  <Card title="Follow our process" icon="setting">
+    Learn about [decision making
+    process](/simpler-grants-protocol/decisions/overview/).
   </Card>
 </CardGrid>
